abe-metapackages (12.1~dev) UNRELEASED; urgency=low

  * Add new package abe-perl-dev
  * abe-packaging-dev recommends cpp-doc and gcc-doc
  * abe-commandline depends on vcsh, oping and lsb-release
  * Follow migration from mr to myrepos
  * Add proposed alternative dependency "taskwarrior" to "task" to
    prepare for the proposed migration (c.f. #719317).

 -- Axel Beckert <abe@deuxchevaux.org>  Sun, 30 Jun 2013 13:48:27 +0200

abe-metapackages (12) unstable; urgency=low

  * Add new metapackages abe-x-browsers and abe-text-browsers.
  * kiva-base recommends abe-monitoring
  * abe-commandline suggests wcalc, irssi-plugin-otr and zsh-lovers.
  * abe-console suggests tpp and sc.
  * Move info from kiva-users to abe-commandline and add pinfo as
    preferred alternative.
  * Add lyx, gummi and texworks to abe-tex.
  * Add mixers and flac to abe-commandline-media.
  * Add subnetcalc as preferred alternative to ipcalc.
  * Add some wireless network and serial console related packages to
    abe-laptop.
  * Add some more filesystem tools and memory testers to abe-partitioning.
  * Add more games to abe-games. :-)
  * Add more useful tools to abe-packaging-dev.
  * Add cmatrix and cheese to abe-fun.
  * Add carettah as alternative to mdpress and promote it to Recommends.
  * Promote Markdown implementations to Recommends.
  * Remove dependencies on auto6to4.
  * Bump Standards-Version to 3.9.4 (no changes)
  * Remove no more needed lintian overrides (empty-binary-package and
    extended-description-is-probably-too-short)
  * Cleanup debian/rules a bit.

 -- Axel Beckert <abe@deuxchevaux.org>  Sat, 25 May 2013 23:46:33 +0200

abe-metapackages (11.1) unstable; urgency=low

  * Downgrade blhc and dh-exec to Recommends as they're not available on
    Squeeze.
  * Prefer mcabber over cabber as the latter is no more available in more
    recent distributions.
  * Downgrade sirc to Suggests as it's no more available in more recent
    distributions.