@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<schemalist>
+  <schema path="/org/freedesktop/color-helper/" id="org.freedesktop.ColorHelper">
+    <key type="d" name="display-gamma">
+      <default>2.4</default>
+      <summary>Default gamma for the display</summary>
+      <description>The default target gamma value for the display. Common values are 1.8, 2.2 and 2.4.</description>
+    </key>
+    <key type="i" name="display-whitepoint">
+      <default>6500</default>
+      <summary>Default display target whitepoint</summary>
+      <description>The default target whitepoint in Kelvin for display calibration, with 0 meaning display native. Common values are 6500 for D65 and 5000 for D50.</description>
+    </key>
+    <key type="i" name="sample-delay">
+      <default>400</default>
+      <summary>Delay between sample intervals</summary>
+      <description>This is the delay between setting the sample color and asking the measuring instrument to take a sample. It is required because both the graphics driver and the display itself introduce latency.</description>
+    </key>
+    <key type="s" name="profile-upload-uri">
+      <default>'http://www.hughski.com/profile-store.php'</default>
+      <summary>Web service profile upload URI</summary>
+      <description>The URI of the web service that allows the calibration tools to upload a specific profile to the Internet.</description>
+    </key>
+  </schema>
+</schemalist>
