@@ -3,7 +3,11 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-build build-arch build-indep:
+build: build-arch build-indep
+build-arch:
+build-indep:
+	cp -pvr colord/ debian/
+
 clean:
 	dh_testdir
 	dh_testroot
@@ -23,6 +27,7 @@ binary-indep:
 	dh_fixperms
 	dh_installdeb
 	dh_gencontrol
+	dh_gencontrol -pcolord -- -v'1:$${source:Version}'
 	dh_md5sums
 	dh_builddeb
 
